fixed home page button spacing

--- a/app/assets/stylesheets/components/_button.scss
+++ b/app/assets/stylesheets/components/_button.scss
@@ -89,3 +89,6 @@
   padding: 10px 15px;
   margin-top: 30px;
 }
+.button-top-margin {
+  margin-top: 5px;
+}
